--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Мишка</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Профессиональный HTML и CSS</a>», уровень 2.</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Мишка | Главная страница</title>
+</head>
 
-  </body>
+<body class="main-page">
+
+  <header class="header main-page__header">
+    <a class="header__logo">
+      <img class="header__logo-image" src="https://placehold.it/86x35" alt="Мишка логотип" width="86" height="35">
+    </a>
+    <nav class="navigation header__navigation">
+      <button class="navigation__toggle" type="button">
+        <span class="visually-hidden">Открыть меню</span>
+      </button>
+      <div class="navigation__wrapper">
+        <ul class="sections-list navigation__list">
+          <li class="sections-list__item">
+            <a class="sections-list__link" href="catalog.html">Каталог товаров</a>
+          </li>
+          <li class="sections-list__item">
+            <a class="sections-list__link" href="#">Вязание на заказ</a>
+          </li>
+        </ul>
+        <ul class="interactive-list navigation__list">
+          <li class="interactive-list__item">
+            <a class="interactive-list__search" href="search.html">Поиск по сайту</a>
+          </li>
+          <li class="interactive-list__item">
+              <a class="interactive-list__basket" href="basket.html">Корзина: пока пуста</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <ul class="promo-links header__promo-links">
+      <li class="promo-links__item">
+        <a class="promo-links__link" href="#">Новые поступления</a>
+      </li>
+      <li class="promo-links__item">
+        <a class="promo-links__link" href="#">Распродажа</a>
+      </li>
+    </ul>
+    <p class="delivery header__delivery">Бесплатная доставка по России</p>
+    <section class="hero header__hero">
+      <h1 class="hero__title">Милые штуки ручной работы для дома</h1>
+      <img class="hero__image" src="https://placehold.it/1150x746" alt="Милые штуки ручной работы для дома" width="1150" height="746">
+      <ul class="hero__list">
+        <li class="hero__item hero__item--interion">
+          <a class="hero__link" href="#">Предметы интерьера</a>
+        </li>
+        <li class="hero__item hero__item--toys">
+          <a class="hero__link" href="#">Детские игрушки</a>
+        </li>
+      </ul>
+    </section>
+  </header>
+
+</body>
+
 </html>
