Сделал разметку блока featured для index.html

--- a/source/index.html
+++ b/source/index.html
@@ -58,6 +58,37 @@
     </section>
   </header>
 
+  <main class="main main-page__main">
+    <section class="featured main__featured">
+      <div class="featured__title">
+        <h2 class="featured__name">Вязанные корзинки</h2>
+        <p class="featured__marker">Товар недели</p>
+      </div>
+      <div class="featured__info">
+        <p class="featured__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+        <table class="datasheet featured__datasheet">
+          <tr class="datasheet__line">
+            <td class="datasheet__cell">Цвет:</td>
+            <td class="datasheet__cell">«Тиффани»/серый</td>
+          </tr>
+          <tr class="datasheet__line">
+            <td class="datasheet__cell">Диаметр:</td>
+            <td class="datasheet__cell">25 см</td>
+          </tr>
+          <tr class="datasheet__line">
+            <td class="datasheet__cell">Высота:</td>
+            <td class="datasheet__cell">15 см</td>
+          </tr>
+        </table>
+      </div>
+      <div class="featured__buy">
+        <p class="featured__price">Цена: 990 руб.</p>
+        <a class="button featured__button" href="#">Заказать</a>
+      </div>
+      <img class="featured__image" src="https://placehold.it/525x636" alt="Вязанные корзинки" width="525" height="636">
+    </section>
+  </main>
+
 </body>
 
 </html>
