--- a/source/index.html
+++ b/source/index.html
@@ -48,10 +48,10 @@
       <h1 class="hero__title">Милые штуки ручной работы для дома</h1>
       <img class="hero__image" src="https://placehold.it/1150x746" alt="Милые штуки ручной работы для дома" width="1150" height="746">
       <ul class="hero__list">
-        <li class="hero__item hero__item--interion">
+        <li class="hero__item hero__item--interior">
           <a class="hero__link" href="#">Предметы интерьера</a>
         </li>
-        <li class="hero__item hero__item--toys">
+        <li class="hero__item hero__item--toy">
           <a class="hero__link" href="#">Детские игрушки</a>
         </li>
       </ul>
