Сделал разметку блока about для index.html

--- a/source/index.html
+++ b/source/index.html
@@ -45,7 +45,7 @@
     </ul>
     <p class="delivery header__delivery">Бесплатная доставка по России</p>
     <section class="hero header__hero">
-      <h1 class="hero__title">Милые штуки ручной работы для дома</h1>
+      <h1 class="hero__title title">Милые штуки ручной работы для дома</h1>
       <img class="hero__image" src="https://placehold.it/1150x746" alt="Милые штуки ручной работы для дома" width="1150" height="746">
       <ul class="hero__list">
         <li class="hero__item hero__item--interior">
@@ -61,7 +61,7 @@
   <main class="main main-page__main">
     <section class="featured main__featured">
       <div class="featured__title">
-        <h2 class="featured__name">Вязанные корзинки</h2>
+        <h2 class="featured__name title">Вязанные корзинки</h2>
         <p class="featured__marker">Товар недели</p>
       </div>
       <div class="featured__info">
@@ -86,6 +86,17 @@
         <a class="button featured__button" href="#">Заказать</a>
       </div>
       <img class="featured__image" src="https://placehold.it/525x636" alt="Вязанные корзинки" width="525" height="636">
+    </section>
+    <section class="about main__about">
+      <h2 class="about__title title">Коротко о нас:</h2>
+      <ul class="about__list">
+        <li class="about__item about__item--icon-flower">Экологически чистые материалы</li>
+        <li class="about__item about__item--icon-rubl">Скандинавский стиль по российской цене</li>
+        <li class="about__item about__item--icon-heart">Увеличивает лайки на фотографиях</li>
+        <li class="about__item about__item--icon-tangle">Связано вручную с любовью и умилением</li>
+        <li class="about__item about__item--icon-rocket">Поддержка отечественного производителя</li>
+        <li class="about__item about__item--icon-gift">Поставляется в подарочной упаковке</li>
+      </ul>
     </section>
   </main>
 
