Сделал разметку блока reviews для index.html

--- a/source/index.html
+++ b/source/index.html
@@ -83,7 +83,7 @@
       </div>
       <div class="featured__buy">
         <p class="featured__price">Цена: 990 руб.</p>
-        <a class="button featured__button" href="#">Заказать</a>
+        <a class="button featured__order" href="#">Заказать</a>
       </div>
       <img class="featured__image" src="https://placehold.it/525x636" alt="Вязанные корзинки" width="525" height="636">
     </section>
@@ -97,6 +97,27 @@
         <li class="about__item about__item--icon-rocket">Поддержка отечественного производителя</li>
         <li class="about__item about__item--icon-gift">Поставляется в подарочной упаковке</li>
       </ul>
+    </section>
+    <section class="reviews main_reviews">
+      <h2 class="reviews__title title">Отзывы</h2>
+      <a class="button reviews__write" href="#">Написать</a>
+      <div class="reviews__list">
+        <blockquote class="reviews__item">
+          <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+          <cite class="reviews__author-name">
+            Анастасия Красильникова<br>
+            <a class="reviews__author-link" href="#">@misssssiskras</a>
+          </cite>
+        </blockquote>
+        <p class="reviews__toggles">
+          <button class="reviews__toggle-left" type="button">
+            <span class="visually-hidden">Назад</span>
+          </button>
+          <button class="reviews__toggle-right" type="button">
+            <span class="visually-hidden">Вперед</span>
+          </button>
+        </p>
+      </div>
     </section>
   </main>
 
