Сделал разметку блока contacts для index.html

--- a/source/index.html
+++ b/source/index.html
@@ -119,6 +119,25 @@
         </p>
       </div>
     </section>
+    <section class="contacts main_contacts">
+      <h2 class="contacts__title title">Контакты</h2>
+      <table class="datasheet contacts__datasheet">
+        <tr class="datasheet__line datasheet__line--contacts">
+          <td class="datasheet__cell datasheet__cell--contacts">e-mail:</td>
+          <td class="datasheet__cell datasheet__cell--contacts">
+            <a class="datasheet__link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+          </td>
+        </tr>
+        <tr class="datasheet__line datasheet__line--contacts">
+          <td class="datasheet__cell datasheet__cell--contacts">адрес:</td>
+          <td class="datasheet__cell datasheet__cell--contacts">г. Санкт-Петербург,<br>ул. Большая Конюшенная,<br>д. 19/8, офис 101</td>
+        </tr>
+      </table>
+      <div class="contacts__map">
+        <img class="contacts__map-image" src="https://placehold.it/768x457" alt="Наш адрес: г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101" width="768" height="457">
+      </div>
+      <a class="button contacts__write-us" href="#">Напишите нам</a>
+    </section>
   </main>
 
 </body>
