--- a/source/index.html
+++ b/source/index.html
@@ -140,6 +140,30 @@
     </section>
   </main>
 
+  <section class="footer main-page__footer">
+    <a class="footer__logo">
+      <img class="footer__logo-image" src="https://placehold.it/102x34" alt="Мишка логотип в футере" width="102" height="34">
+    </a>
+    <ul class="social footer__social">
+      <li class="social__item">
+        <a class="social__link social__link--instagram" href="#">
+          <span class="visually-hidden">Мы в Instagram</span>
+        </a>
+      </li>
+      <li class="social__item">
+        <a class="social__link social__link--facebook" href="#">
+          <span class="visually-hidden">Мы в Facebook</span>
+        </a>
+      </li>
+      <li class="social__item">
+        <a class="social__link social__link--twitter" href="#">
+          <span class="visually-hidden">Мы в Twitter</span>
+        </a>
+      </li>
+    </ul>
+    <a class="footer__link footer__link--icon-academy" href="https://htmlacademy.ru/intensive/adaptive">Разработано</a>
+  </section>
+
 </body>
 
 </html>
