Сделал разметку модального окна для index.html

--- a/source/index.html
+++ b/source/index.html
@@ -163,6 +163,18 @@
     </ul>
     <a class="footer__link footer__link--icon-academy" href="https://htmlacademy.ru/intensive/adaptive">Разработано</a>
   </section>
+  <!-- Modals -->
+  <div class="overlay"></div>
+  <section class="modal modal-basket main-page__modal">
+    <h2 class="modal-basket__title title">Добавить в корзину</h2>
+    <p class="modal-basket__text">Выберите размер:</p>
+    <div class="modal-basket__size">
+      <button class="button modal-basket__size-button modal-basket__size-button--active">S</button>
+      <button class="button modal-basket__size-button">M</button>
+      <button class="button modal-basket__size-button">L</button>
+    </div>
+    <a class="button modal-basket__add" href="#">Добавить</a>
+  </section>
 
 </body>
 
