Изменил название класса в body и в зависимых вложенных элементах

--- a/source/index.html
+++ b/source/index.html
@@ -6,9 +6,9 @@
   <title>HTML Academy: Мишка | Главная страница</title>
 </head>
 
-<body class="main-page">
+<body class="page">
 
-  <header class="header main-page__header">
+  <header class="header page__header">
     <a class="header__logo">
       <img class="header__logo-image" src="https://placehold.it/86x35" alt="Мишка логотип" width="86" height="35">
     </a>
@@ -58,7 +58,7 @@
     </section>
   </header>
 
-  <main class="main main-page__main">
+  <main class="main page__main">
     <section class="featured main__featured">
       <div class="featured__title">
         <h2 class="featured__name title">Вязанные корзинки</h2>
@@ -140,7 +140,7 @@
     </section>
   </main>
 
-  <section class="footer main-page__footer">
+  <section class="footer page__footer">
     <a class="footer__logo">
       <img class="footer__logo-image" src="https://placehold.it/102x34" alt="Мишка логотип в футере" width="102" height="34">
     </a>
@@ -165,7 +165,7 @@
   </section>
   <!-- Modals -->
   <div class="overlay"></div>
-  <section class="modal modal-basket main-page__modal">
+  <section class="modal modal-basket page__modal">
     <h2 class="modal-basket__title title">Добавить в корзину</h2>
     <p class="modal-basket__text">Выберите размер:</p>
     <div class="modal-basket__size">
