--- a/source/form.html
+++ b/source/form.html
@@ -45,12 +45,89 @@
     </ul>
     <p class="delivery header__delivery">Бесплатная доставка по России</p>
     <section class="hero hero--form-page header__hero">
-      <h1 class="hero__title title">Милые штуки ручной работы для дома</h1>
+      <h1 class="hero__title title">Вязание на заказ</h1>
     </section>
   </header>
 
   <main class="main page__main">
-
+    <h1 class="visually-hidden">Форма заказа</h1>
+    <p class="main__text text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
+    <form class="form main__form" action="https://echo.htmlacademy.ru" method="GET">
+      <fieldset class="form__fieldset">
+        <legend class="form__legend">Тип</legend>
+        <ul class="form__inputs">
+          <li class="form__inputs-item">
+            <input class="visually-hidden form__input form__input--radio" type="radio" name="type" id="accessory" value="accessory" checked>
+            <label class="form__label" for="accessory">Аксессуар для интерьера</label>
+          </li>
+          <li class="form__inputs-item">
+            <input class="visually-hidden form__input form__input--radio" type="radio" name="type" id="toy" value="toy">
+            <label class="form__label" for="toy">Аксессуар для интерьера</label>
+          </li>
+        </ul>
+      </fieldset>
+      <fieldset class="form__fieldset">
+        <legend class="form__legend">Цвет</legend>
+        <ul class="form__inputs">
+          <li class="form__inputs-item">
+            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="white" id="color-white" checked>
+            <label class="form__label" for="color-white">Белый</label>
+          </li>
+          <li class="form__inputs-item">
+            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="grey" id="color-grey" checked>
+            <label class="form__label" for="color-grey">Серый</label>
+          </li>
+          <li class="form__inputs-item">
+            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="tiffany" id="color-tiffany">
+            <label class="form__label" for="color-tiffany">«Тиффани»</label>
+          </li>
+          <li class="form__inputs-item">
+            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="black" id="color-black">
+            <label class="form__label" for="color-black">Черный</label>
+          </li>
+          <li class="form__inputs-item">
+            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="pink" id="color-pink">
+            <label class="form__label" for="color-pink">Розовый</label>
+          </li>
+          <li class="form__inputs-item">
+            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="orange" id="color-orange">
+            <label class="form__label" for="color-orange">Оранжевый</label>
+          </li>
+        </ul>
+      </fieldset>
+      <fieldset class="form__fieldset">
+        <legend class="form__legend">Фио</legend>
+        <p class="form__field">
+          <label class="form__label" for="name-field">Имя:</label>
+          <input class="form__input form__input--text" type="text" name="name" id="name-field" placeholder="Введите ваше имя*" required>
+        </p>
+        <p class="form__field">
+          <label class="form__label" for="surname-field">Фамилия:</label>
+          <input class="form__input form__input--text" type="text" name="name" id="surname-field" placeholder="Укажите фамилию*" required>
+        </p>
+        <p class="form__field">
+          <label class="form__label" for="second-name-field">Отчество:</label>
+          <input class="form__input form__input--text" type="text" name="name" id="second-name-field" placeholder="Отчество, если желаете">
+        </p>
+      </fieldset>
+      <fieldset class="form__fieldset">
+        <legend class="form__legend">Тел</legend>
+        <label class="visually-hidden" for="phone-field">Ваш телефон:</label>
+        <input class="form__input form__input--tel" type="tel" name="phone" id="phone-field" placeholder="+7 XXX XX XX*" required>
+      </fieldset>
+      <fieldset class="form__fieldset">
+        <legend class="form__legend">E-mail</legend>
+        <label class="visually-hidden" for="email-field">Ваш e-mail:</label>
+        <input class="form__input form__input--email" type="tel" name="email" id="email-field" placeholder="Ваш Email*" required>
+      </fieldset>
+      <fieldset class="form__fieldset">
+        <legend class="form__legend">Доп</legend>
+        <label class="visually-hidden" for="textarea-field">Опишите ваши пожелания</label>
+        <textarea class="form__input form__input--textarea" name="description" id="textarea-field" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+      </fieldset>
+      <p class="form__text text">*Поля обязательны для заполнения</p>
+      <button class="button form__send" type="submit">Отправить заказ</button>
+    </form>
   </main>
 
   <section class="footer page__footer">
