Сделал разметку списка товаров для catalog.html

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -50,7 +50,51 @@
   </header>
 
   <main class="main page__main">
-
+    <section class="main__catalog">
+      <h2 class="visually-hidden">Наши изделия</h2>
+      <ul class="products-list">
+        <li class="product products-list__item">
+          <img class="product__image" src="https://placehold.it/316x462" alt="Зайчик-попрыгайчик">
+          <div class="product__wrapper">
+            <h3 class="product__title">Зайчик-попрыгайчик</h3>
+            <p class="product__description">Рост 30 см, вес 200 г</p>
+            <div class="product__buy">
+              <p class="product__price">1 200 руб.</p>
+              <a class="product__order" href="#">
+                <span class="visually-hidden">Положить в корзину</span>
+              </a>
+            </div>
+          </div>
+        </li>
+        <li class="product products-list__item">
+          <img class="product__image" src="https://placehold.it/316x462" alt="Корзинка для белья">
+          <div class="product__wrapper">
+            <h3 class="product__title">Корзинка для белья</h3>
+            <p class="product__description">Диаметр 15 см, высота 10 см</p>
+            <div class="product__buy">
+              <p class="product__price">690 руб.</p>
+              <a class="product__order" href="#">
+                <span class="visually-hidden">Положить в корзину</span>
+              </a>
+            </div>
+          </div>
+        </li>
+        <li class="product products-list__item">
+          <img class="product__image" src="https://placehold.it/316x462" alt="Большая корзинка
+          для игрушек">
+          <div class="product__wrapper">
+            <h3 class="product__title">Большая корзинка для игрушек</h3>
+            <p class="product__description">Диаметр 30 см, высота 30 см</p>
+            <div class="product__buy">
+              <p class="product__price">1 500 руб.</p>
+              <a class="product__order" href="#">
+                <span class="visually-hidden">Положить в корзину</span>
+              </a>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </section>
   </main>
 
   <section class="footer page__footer">
