Сделал разметку видео-блока для catalog.html

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -56,7 +56,7 @@
         <li class="product products-list__item">
           <img class="product__image" src="https://placehold.it/316x462" alt="Зайчик-попрыгайчик">
           <div class="product__wrapper">
-            <h3 class="product__title">Зайчик-попрыгайчик</h3>
+            <h3 class="product__title title-small">Зайчик-попрыгайчик</h3>
             <p class="product__description">Рост 30 см, вес 200 г</p>
             <div class="product__buy">
               <p class="product__price">1 200 руб.</p>
@@ -69,7 +69,7 @@
         <li class="product products-list__item">
           <img class="product__image" src="https://placehold.it/316x462" alt="Корзинка для белья">
           <div class="product__wrapper">
-            <h3 class="product__title">Корзинка для белья</h3>
+            <h3 class="product__title title-small">Корзинка для белья</h3>
             <p class="product__description">Диаметр 15 см, высота 10 см</p>
             <div class="product__buy">
               <p class="product__price">690 руб.</p>
@@ -83,7 +83,7 @@
           <img class="product__image" src="https://placehold.it/316x462" alt="Большая корзинка
           для игрушек">
           <div class="product__wrapper">
-            <h3 class="product__title">Большая корзинка для игрушек</h3>
+            <h3 class="product__title title-small">Большая корзинка для игрушек</h3>
             <p class="product__description">Диаметр 30 см, высота 30 см</p>
             <div class="product__buy">
               <p class="product__price">1 500 руб.</p>
@@ -94,6 +94,17 @@
           </div>
         </li>
       </ul>
+    </section>
+    <section class="video main__video">
+      <h2 class="video__title title-small">Процесс производства</h2>
+      <div class="video-player video__video-player">
+        <img class="video-player__screenshot" src="https://placehold.it/668x455" alt="Видео процесса производства" width="668" height="455">
+        <button class="video-player__play" type="button">
+          <span class="visually-hidden">Запустить видео</span>
+        </button>
+      </div>
+      <p class="video__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+      <a class="button video__order" href="#">Сделать заказ</a>
     </section>
   </main>
 
