--- a/source/catalog.html
+++ b/source/catalog.html
@@ -54,9 +54,13 @@
       <h2 class="visually-hidden">Наши изделия</h2>
       <ul class="products-list">
         <li class="product products-list__item">
-          <img class="product__image" src="https://placehold.it/316x462" alt="Зайчик-попрыгайчик">
+          <a class="product__link" href="#">
+            <img class="product__image" src="https://placehold.it/316x462" alt="Зайчик-попрыгайчик">
+          </a>
           <div class="product__wrapper">
-            <h3 class="product__title title-small">Зайчик-попрыгайчик</h3>
+            <h3 class="product__title title-small">
+              <a class="product__link" href="#">Зайчик-попрыгайчик</a>
+            </h3>
             <p class="product__description">Рост 30 см, вес 200 г</p>
             <div class="product__buy">
               <p class="product__price">1 200 руб.</p>
@@ -67,9 +71,13 @@
           </div>
         </li>
         <li class="product products-list__item">
-          <img class="product__image" src="https://placehold.it/316x462" alt="Корзинка для белья">
+          <a class="product__link" href="#">
+            <img class="product__image" src="https://placehold.it/316x462" alt="Корзинка для белья">
+          </a>
           <div class="product__wrapper">
-            <h3 class="product__title title-small">Корзинка для белья</h3>
+            <h3 class="product__title title-small">
+              <a class="product__link" href="#">Корзинка для белья</a>
+            </h3>
             <p class="product__description">Диаметр 15 см, высота 10 см</p>
             <div class="product__buy">
               <p class="product__price">690 руб.</p>
@@ -80,10 +88,14 @@
           </div>
         </li>
         <li class="product products-list__item">
-          <img class="product__image" src="https://placehold.it/316x462" alt="Большая корзинка
+          <a class="product__link" href="#">
+            <img class="product__image" src="https://placehold.it/316x462" alt="Большая корзинка
           для игрушек">
+          </a>
           <div class="product__wrapper">
-            <h3 class="product__title title-small">Большая корзинка для игрушек</h3>
+            <h3 class="product__title title-small">
+              <a class="product__link" href="#">Большая корзинка для игрушек</a>
+            </h3>
             <p class="product__description">Диаметр 30 см, высота 30 см</p>
             <div class="product__buy">
               <p class="product__price">1 500 руб.</p>
