Изменил содержимое label для input:id='toy', в input:type='checkbox' добавил атрибут value и изменил значение name, исправил значение name в блоке ФИО, изменил type в инпуте E-mail

--- a/source/form.html
+++ b/source/form.html
@@ -62,7 +62,7 @@
           </li>
           <li class="form__inputs-item">
             <input class="visually-hidden form__input form__input--radio" type="radio" name="type" id="toy" value="toy">
-            <label class="form__label" for="toy">Аксессуар для интерьера</label>
+            <label class="form__label" for="toy">Детская игрушка</label>
           </li>
         </ul>
       </fieldset>
@@ -70,27 +70,27 @@
         <legend class="form__legend">Цвет</legend>
         <ul class="form__inputs">
           <li class="form__inputs-item">
-            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="white" id="color-white" checked>
+            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="color" id="color-white" value="white" checked>
             <label class="form__label" for="color-white">Белый</label>
           </li>
           <li class="form__inputs-item">
-            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="grey" id="color-grey" checked>
+            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="color" id="color-grey" value="grey" checked>
             <label class="form__label" for="color-grey">Серый</label>
           </li>
           <li class="form__inputs-item">
-            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="tiffany" id="color-tiffany">
+            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="color" id="color-tiffany" value="tiffany">
             <label class="form__label" for="color-tiffany">«Тиффани»</label>
           </li>
           <li class="form__inputs-item">
-            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="black" id="color-black">
+            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="color" id="color-black" value="black">
             <label class="form__label" for="color-black">Черный</label>
           </li>
           <li class="form__inputs-item">
-            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="pink" id="color-pink">
+            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="color" id="color-pink" value="pink">
             <label class="form__label" for="color-pink">Розовый</label>
           </li>
           <li class="form__inputs-item">
-            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="orange" id="color-orange">
+            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="color" id="color-orange" value="orange">
             <label class="form__label" for="color-orange">Оранжевый</label>
           </li>
         </ul>
@@ -103,11 +103,11 @@
         </p>
         <p class="form__field">
           <label class="form__label" for="surname-field">Фамилия:</label>
-          <input class="form__input form__input--text" type="text" name="name" id="surname-field" placeholder="Укажите фамилию*" required>
+          <input class="form__input form__input--text" type="text" name="surname" id="surname-field" placeholder="Укажите фамилию*" required>
         </p>
         <p class="form__field">
           <label class="form__label" for="second-name-field">Отчество:</label>
-          <input class="form__input form__input--text" type="text" name="name" id="second-name-field" placeholder="Отчество, если желаете">
+          <input class="form__input form__input--text" type="text" name="second-name" id="second-name-field" placeholder="Отчество, если желаете">
         </p>
       </fieldset>
       <fieldset class="form__fieldset">
@@ -118,7 +118,7 @@
       <fieldset class="form__fieldset">
         <legend class="form__legend">E-mail</legend>
         <label class="visually-hidden" for="email-field">Ваш e-mail:</label>
-        <input class="form__input form__input--email" type="tel" name="email" id="email-field" placeholder="Ваш Email*" required>
+        <input class="form__input form__input--email" type="email" name="email" id="email-field" placeholder="Ваш Email*" required>
       </fieldset>
       <fieldset class="form__fieldset">
         <legend class="form__legend">Доп</legend>
