--- a/source/catalog.html
+++ b/source/catalog.html
@@ -64,9 +64,9 @@
             <p class="product__description">Рост 30 см, вес 200 г</p>
             <div class="product__buy">
               <p class="product__price">1 200 руб.</p>
-              <a class="product__order" href="#">
+              <button class="product__order" type="button">
                 <span class="visually-hidden">Положить в корзину</span>
-              </a>
+              </button>
             </div>
           </div>
         </li>
@@ -81,16 +81,15 @@
             <p class="product__description">Диаметр 15 см, высота 10 см</p>
             <div class="product__buy">
               <p class="product__price">690 руб.</p>
-              <a class="product__order" href="#">
+              <button class="product__order" type="button">
                 <span class="visually-hidden">Положить в корзину</span>
-              </a>
+              </button>
             </div>
           </div>
         </li>
         <li class="product products-list__item">
           <a class="product__link" href="#">
-            <img class="product__image" src="https://placehold.it/316x462" alt="Большая корзинка
-          для игрушек">
+            <img class="product__image" src="https://placehold.it/316x462" alt="Большая корзинка для игрушек">
           </a>
           <div class="product__wrapper">
             <h3 class="product__title title-small">
@@ -99,9 +98,9 @@
             <p class="product__description">Диаметр 30 см, высота 30 см</p>
             <div class="product__buy">
               <p class="product__price">1 500 руб.</p>
-              <a class="product__order" href="#">
+              <button class="product__order" type="button">
                 <span class="visually-hidden">Положить в корзину</span>
-              </a>
+              </button>
             </div>
           </div>
         </li>
