--- a/source/form.html
+++ b/source/form.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Мишка | Форма</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page">
@@ -50,7 +51,7 @@
   </header>
 
   <main class="main page__main">
-    <h1 class="visually-hidden">Форма заказа</h1>
+    <h2 class="visually-hidden">Форма заказа</h2>
     <p class="main__text text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
     <form class="form main__form" action="https://echo.htmlacademy.ru" method="GET">
       <fieldset class="form__fieldset">
@@ -130,7 +131,7 @@
     </form>
   </main>
 
-  <section class="footer page__footer">
+  <footer class="footer page__footer">
     <a class="footer__logo">
       <img class="footer__logo-image" src="https://placehold.it/102x34" alt="Мишка логотип в футере" width="102" height="34">
     </a>
@@ -152,7 +153,7 @@
       </li>
     </ul>
     <a class="footer__link footer__link--icon-academy" href="https://htmlacademy.ru/intensive/adaptive">Разработано</a>
-  </section>
+  </footer>
 
 </body>
 
