--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Мишка | Главная страница</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page">
@@ -140,7 +141,7 @@
     </section>
   </main>
 
-  <section class="footer page__footer">
+  <footer class="footer page__footer">
     <a class="footer__logo">
       <img class="footer__logo-image" src="https://placehold.it/102x34" alt="Мишка логотип в футере" width="102" height="34">
     </a>
@@ -162,7 +163,7 @@
       </li>
     </ul>
     <a class="footer__link footer__link--icon-academy" href="https://htmlacademy.ru/intensive/adaptive">Разработано</a>
-  </section>
+  </footer>
   <!-- Modals -->
   <div class="overlay"></div>
   <section class="modal modal-basket page__modal">
