Изменил *.html для соответствия mobile-макетам (скрыл некоторые блоки, изменил размеры заглушек картинок)

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -36,7 +36,7 @@
         </ul>
       </div>
     </nav>
-    <ul class="promo-links header__promo-links">
+    <!-- <ul class="promo-links header__promo-links">
       <li class="promo-links__item">
         <a class="promo-links__link" href="#">Новые поступления</a>
       </li>
@@ -44,7 +44,7 @@
         <a class="promo-links__link" href="#">Распродажа</a>
       </li>
     </ul>
-    <p class="delivery header__delivery">Бесплатная доставка по России</p>
+    <p class="delivery header__delivery">Бесплатная доставка по России</p> -->
     <section class="hero hero--catalog-page header__hero">
       <h1 class="hero__title title">Каталог товаров</h1>
     </section>
@@ -56,7 +56,7 @@
       <ul class="products-list">
         <li class="product products-list__item">
           <a class="product__link" href="#">
-            <img class="product__image" src="https://placehold.it/316x462" alt="Зайчик-попрыгайчик">
+            <img class="product__image" src="https://placehold.it/260x195" alt="Зайчик-попрыгайчик" width="260" height="195">
           </a>
           <div class="product__wrapper">
             <h3 class="product__title title-small">
@@ -73,7 +73,7 @@
         </li>
         <li class="product products-list__item">
           <a class="product__link" href="#">
-            <img class="product__image" src="https://placehold.it/316x462" alt="Корзинка для белья">
+            <img class="product__image" src="https://placehold.it/260x195" alt="Корзинка для белья" width="260" height="195">
           </a>
           <div class="product__wrapper">
             <h3 class="product__title title-small">
@@ -90,7 +90,7 @@
         </li>
         <li class="product products-list__item">
           <a class="product__link" href="#">
-            <img class="product__image" src="https://placehold.it/316x462" alt="Большая корзинка для игрушек">
+            <img class="product__image" src="https://placehold.it/260x195" alt="Большая корзинка для игрушек" width="260" height="195">
           </a>
           <div class="product__wrapper">
             <h3 class="product__title title-small">
@@ -110,7 +110,7 @@
     <section class="video main__video">
       <h2 class="video__title title-small">Процесс производства</h2>
       <div class="video-player video__video-player">
-        <img class="video-player__screenshot" src="https://placehold.it/668x455" alt="Видео процесса производства" width="668" height="455">
+        <img class="video-player__screenshot" src="https://placehold.it/260x150" alt="Видео процесса производства" width="260" height="150">
         <button class="video-player__play" type="button">
           <span class="visually-hidden">Запустить видео</span>
         </button>
@@ -121,9 +121,9 @@
   </main>
 
   <footer class="footer page__footer">
-    <a class="footer__logo">
+    <!-- <a class="footer__logo">
       <img class="footer__logo-image" src="https://placehold.it/102x34" alt="Мишка логотип в футере" width="102" height="34">
-    </a>
+    </a> -->
     <ul class="social footer__social">
       <li class="social__item">
         <a class="social__link social__link--instagram" href="#">
