--- a/source/form.html
+++ b/source/form.html
@@ -36,7 +36,7 @@
         </ul>
       </div>
     </nav>
-    <ul class="promo-links header__promo-links">
+    <!-- <ul class="promo-links header__promo-links">
       <li class="promo-links__item">
         <a class="promo-links__link" href="#">Новые поступления</a>
       </li>
@@ -44,7 +44,7 @@
         <a class="promo-links__link" href="#">Распродажа</a>
       </li>
     </ul>
-    <p class="delivery header__delivery">Бесплатная доставка по России</p>
+    <p class="delivery header__delivery">Бесплатная доставка по России</p> -->
     <section class="hero hero--form-page header__hero">
       <h1 class="hero__title title">Вязание на заказ</h1>
     </section>
@@ -132,9 +132,9 @@
   </main>
 
   <footer class="footer page__footer">
-    <a class="footer__logo">
+    <!-- <a class="footer__logo">
       <img class="footer__logo-image" src="https://placehold.it/102x34" alt="Мишка логотип в футере" width="102" height="34">
-    </a>
+    </a> -->
     <ul class="social footer__social">
       <li class="social__item">
         <a class="social__link social__link--instagram" href="#">
