--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
         </ul>
       </div>
     </nav>
-    <ul class="promo-links header__promo-links">
+    <!-- <ul class="promo-links header__promo-links">
       <li class="promo-links__item">
         <a class="promo-links__link" href="#">Новые поступления</a>
       </li>
@@ -44,10 +44,10 @@
         <a class="promo-links__link" href="#">Распродажа</a>
       </li>
     </ul>
-    <p class="delivery header__delivery">Бесплатная доставка по России</p>
+    <p class="delivery header__delivery">Бесплатная доставка по России</p> -->
     <section class="hero header__hero">
       <h1 class="hero__title title">Милые штуки ручной работы для дома</h1>
-      <img class="hero__image" src="https://placehold.it/1150x746" alt="Милые штуки ручной работы для дома" width="1150" height="746">
+      <img class="hero__image" src="https://placehold.it/575x373" alt="Милые штуки ручной работы для дома" width="575" height="373">
       <ul class="hero__list">
         <li class="hero__item hero__item--interior">
           <a class="hero__link" href="#">Предметы интерьера</a>
@@ -82,7 +82,7 @@
           </tr>
         </table>
       </div>
-      <img class="featured__image" src="https://placehold.it/525x636" alt="Вязанные корзинки" width="525" height="636">
+      <img class="featured__image" src="https://placehold.it/260x315" alt="Вязанные корзинки" width="260" height="315">
       <div class="featured__buy">
         <p class="featured__price">Цена: 990 руб.</p>
         <a class="button featured__order" href="#">Заказать</a>
@@ -135,16 +135,16 @@
         </tr>
       </table>
       <div class="contacts__map">
-        <img class="contacts__map-image" src="https://placehold.it/768x457" alt="Наш адрес: г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101" width="768" height="457">
+        <img class="contacts__map-image" src="https://placehold.it/322x457" alt="Наш адрес: г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101" width="322" height="457">
       </div>
       <a class="button contacts__write-us" href="#">Напишите нам</a>
     </section>
   </main>
 
   <footer class="footer page__footer">
-    <a class="footer__logo">
+    <!-- <a class="footer__logo">
       <img class="footer__logo-image" src="https://placehold.it/102x34" alt="Мишка логотип в футере" width="102" height="34">
-    </a>
+    </a> -->
     <ul class="social footer__social">
       <li class="social__item">
         <a class="social__link social__link--instagram" href="#">
