--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,29 +9,37 @@
 
 <body class="page">
 
-  <header class="header page__header">
-    <a class="header__logo" href="index.html">
-      <img class="header__logo-image" src="https://placehold.it/86x35" alt="Мишка логотип" width="86" height="35">
-    </a>
-    <nav class="navigation header__navigation">
-      <button class="navigation__toggle" type="button">
+  <header class="header">
+    <div class="header__wrapper">
+      <a class="header__logo" href="index.html">
+        <img class="header__logo-image" src="img/logo-mobile.svg" alt="Мишка логотип" width="86" height="35">
+      </a>
+      <button class="header__toggle header__toggle--close" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
+    </div>
+    <nav class="navigation">
       <div class="navigation__wrapper">
-        <ul class="sections-list navigation__list">
-          <li class="sections-list__item">
-            <a class="sections-list__link" href="catalog.html">Каталог товаров</a>
+        <ul class="navigation__list sections">
+          <li class="navigation__item">
+            <a class="navigation__link" href="catalog.html">Каталог товаров</a>
           </li>
-          <li class="sections-list__item">
-            <a class="sections-list__link">Вязание на заказ</a>
+          <li class="navigation__item">
+            <a class="navigation__link" href="form.html">Вязание на заказ</a>
           </li>
         </ul>
-        <ul class="interactive-list navigation__list">
-          <li class="interactive-list__item">
-            <a class="interactive-list__search" href="search.html">Поиск по сайту</a>
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a class="navigation__link navigation__link--interactive" href="search.html">
+              <img class="navigation__icon-search" src="https://placehold.it/18x18" alt="Поиск по сайту" width="18" height="18" >
+              Поиск по сайту
+            </a>
           </li>
-          <li class="interactive-list__item">
-            <a class="interactive-list__basket" href="basket.html">Корзина: пока пуста</a>
+          <li class="navigation__item">
+            <a class="navigation__link navigation__link--interactive" href="basket.html">
+              <img class="navigation__icon-basket" src="https://placehold.it/21x18" alt="Корзина" width="21" height="18">
+              Корзина: пока пуста
+            </a>
           </li>
         </ul>
       </div>
@@ -45,7 +53,7 @@
       </li>
     </ul>
     <p class="delivery header__delivery">Бесплатная доставка по России</p> -->
-    <section class="hero hero--catalog-page header__hero">
+    <section class="hero hero--inner-page">
       <h1 class="hero__title title">Каталог товаров</h1>
     </section>
   </header>
