--- a/source/index.html
+++ b/source/index.html
@@ -9,29 +9,37 @@
 
 <body class="page">
 
-  <header class="header page__header">
-    <a class="header__logo">
-      <img class="header__logo-image" src="https://placehold.it/86x35" alt="Мишка логотип" width="86" height="35">
-    </a>
-    <nav class="navigation header__navigation">
-      <button class="navigation__toggle" type="button">
+  <header class="header">
+    <div class="header__wrapper">
+      <a class="header__logo">
+        <img class="header__logo-image" src="img/logo-mobile.svg" alt="Мишка логотип" width="86" height="35">
+      </a>
+      <button class="header__toggle header__toggle--close" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
+    </div>
+    <nav class="navigation">
       <div class="navigation__wrapper">
-        <ul class="sections-list navigation__list">
-          <li class="sections-list__item">
-            <a class="sections-list__link" href="catalog.html">Каталог товаров</a>
+        <ul class="navigation__list sections">
+          <li class="navigation__item">
+            <a class="navigation__link" href="catalog.html">Каталог товаров</a>
           </li>
-          <li class="sections-list__item">
-            <a class="sections-list__link" href="#">Вязание на заказ</a>
+          <li class="navigation__item">
+            <a class="navigation__link" href="form.html">Вязание на заказ</a>
           </li>
         </ul>
-        <ul class="interactive-list navigation__list">
-          <li class="interactive-list__item">
-            <a class="interactive-list__search" href="search.html">Поиск по сайту</a>
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a class="navigation__link navigation__link--interactive" href="search.html">
+              <img class="navigation__icon-search" src="https://placehold.it/18x18" alt="Поиск по сайту" width="18" height="18" >
+              Поиск по сайту
+            </a>
           </li>
-          <li class="interactive-list__item">
-            <a class="interactive-list__basket" href="basket.html">Корзина: пока пуста</a>
+          <li class="navigation__item">
+            <a class="navigation__link navigation__link--interactive" href="basket.html">
+              <img class="navigation__icon-basket" src="https://placehold.it/21x18" alt="Корзина" width="21" height="18">
+              Корзина: пока пуста
+            </a>
           </li>
         </ul>
       </div>
@@ -45,21 +53,26 @@
       </li>
     </ul>
     <p class="delivery header__delivery">Бесплатная доставка по России</p> -->
-    <section class="hero header__hero">
-      <h1 class="hero__title title">Милые штуки ручной работы для дома</h1>
-      <img class="hero__image" src="https://placehold.it/575x373" alt="Милые штуки ручной работы для дома" width="575" height="373">
+    <section class="hero hero--main-page">
+      <h1 class="hero__title">Милые штуки ручной<br> работы для дома</h1>
       <ul class="hero__list">
         <li class="hero__item hero__item--interior">
-          <a class="hero__link" href="#">Предметы интерьера</a>
+          <a class="hero__link" href="#">
+            <span class="hero__link-text">Предметы интерьера</span>
+            <img class="hero__icon-interion" src="https://placehold.it/40x62" alt="Предметы интерьера иконка">
+          </a>
         </li>
         <li class="hero__item hero__item--toy">
-          <a class="hero__link" href="#">Детские игрушки</a>
+          <a class="hero__link" href="#">
+            <span class="hero__link-text">Детские игрушки</span>
+            <img class="hero__icon-toy" src="https://placehold.it/60x60" alt="Детские игрушки">
+          </a>
         </li>
       </ul>
     </section>
   </header>
 
-  <main class="main page__main">
+  <main class="main">
     <section class="featured main__featured">
       <div class="featured__title">
         <h2 class="featured__name title">Вязанные корзинки</h2>
