Правки разметки для блока featured в index.html

--- a/source/index.html
+++ b/source/index.html
@@ -73,16 +73,16 @@
   </header>
 
   <main class="main">
-    <section class="featured main__featured">
+    <section class="featured">
       <div class="featured__title">
         <h2 class="featured__name title">Вязанные корзинки</h2>
         <p class="featured__marker">Товар недели</p>
       </div>
       <div class="featured__info">
         <p class="featured__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
-        <table class="datasheet featured__datasheet">
+        <table class="datasheet">
           <tr class="datasheet__line">
-            <td class="datasheet__cell">Цвет:</td>
+            <td class="datasheet__cell datasheet__cell--width">Цвет:</td>
             <td class="datasheet__cell">«Тиффани»/серый</td>
           </tr>
           <tr class="datasheet__line">
