--- a/source/index.html
+++ b/source/index.html
@@ -101,7 +101,7 @@
         <a class="button featured__order" href="#">Заказать</a>
       </div>
     </section>
-    <section class="about main__about">
+    <section class="about">
       <h2 class="about__title title">Коротко о нас:</h2>
       <ul class="about__list">
         <li class="about__item about__item--icon-flower">Экологически чистые материалы</li>
@@ -112,9 +112,8 @@
         <li class="about__item about__item--icon-gift">Поставляется в подарочной упаковке</li>
       </ul>
     </section>
-    <section class="reviews main_reviews">
+    <section class="reviews">
       <h2 class="reviews__title title">Отзывы</h2>
-      <a class="button reviews__write" href="#">Написать</a>
       <div class="reviews__list">
         <blockquote class="reviews__item">
           <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
@@ -124,13 +123,16 @@
           </cite>
         </blockquote>
         <p class="reviews__toggles">
-          <button class="reviews__toggle-left" type="button">
+          <button class="reviews__toggle" type="button">
             <span class="visually-hidden">Назад</span>
+            <img src="https://placehold.it/50x26" alt="Предыдущий отзыв" width="50" height="26">
           </button>
-          <button class="reviews__toggle-right" type="button">
+          <button class="reviews__toggle" type="button">
             <span class="visually-hidden">Вперед</span>
+            <img src="https://placehold.it/50x26" alt="Следующий отзыв" width="50" height="26">
           </button>
         </p>
+        <a class="button reviews__write" href="#">Написать</a>
       </div>
     </section>
     <section class="contacts main_contacts">
