--- a/source/index.html
+++ b/source/index.html
@@ -135,20 +135,20 @@
         <a class="button reviews__write" href="#">Написать</a>
       </div>
     </section>
-    <section class="contacts main_contacts">
-      <h2 class="contacts__title title">Контакты</h2>
-      <table class="datasheet contacts__datasheet">
-        <tr class="datasheet__line datasheet__line--contacts">
-          <td class="datasheet__cell datasheet__cell--contacts">e-mail:</td>
-          <td class="datasheet__cell datasheet__cell--contacts">
-            <a class="datasheet__link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
-          </td>
-        </tr>
-        <tr class="datasheet__line datasheet__line--contacts">
-          <td class="datasheet__cell datasheet__cell--contacts">адрес:</td>
-          <td class="datasheet__cell datasheet__cell--contacts">г. Санкт-Петербург,<br>ул. Большая Конюшенная,<br>д. 19/8, офис 101</td>
-        </tr>
-      </table>
+    <section class="contacts">
+      <h2 class="contacts__title">Контакты</h2>
+      <div class="contacts__data">
+        <div class="contacts__row">
+          <div class="contacts__section">e-mail:</div>
+          <div class="contacts__section-value">
+            <a class="contacts__link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+          </div>
+        </div>
+        <div class="contacts__row">
+          <div class="contacts__section">адрес:</div>
+          <div class="contacts__section-value">г. Санкт-Петербург,<br>ул. Большая Конюшенная,<br>д. 19/8, офис 101</div>
+        </div>
+      </div>
       <div class="contacts__map">
         <img class="contacts__map-image" src="https://placehold.it/322x457" alt="Наш адрес: г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101" width="322" height="457">
       </div>
