--- a/source/form.html
+++ b/source/form.html
@@ -139,7 +139,7 @@
     </form>
   </main>
 
-  <footer class="footer page__footer">
+  <footer class="footer">
     <!-- <a class="footer__logo">
       <img class="footer__logo-image" src="https://placehold.it/102x34" alt="Мишка логотип в футере" width="102" height="34">
     </a> -->
@@ -147,20 +147,27 @@
       <li class="social__item">
         <a class="social__link social__link--instagram" href="#">
           <span class="visually-hidden">Мы в Instagram</span>
+          <img class="social__icon" src="https://placehold.it/25x25" alt="Мы в Instagram">
         </a>
       </li>
       <li class="social__item">
         <a class="social__link social__link--facebook" href="#">
           <span class="visually-hidden">Мы в Facebook</span>
+          <img class="social__icon" src="https://placehold.it/25x25" alt="Мы в Facebook">
         </a>
       </li>
       <li class="social__item">
         <a class="social__link social__link--twitter" href="#">
           <span class="visually-hidden">Мы в Twitter</span>
+          <img class="social__icon" src="https://placehold.it/25x25" alt="Мы в Twitter">
         </a>
       </li>
     </ul>
-    <a class="footer__link footer__link--icon-academy" href="https://htmlacademy.ru/intensive/adaptive">Разработано</a>
+    <div class="footer__copyright">
+      <a class="footer__link" href="https://htmlacademy.ru/intensive/adaptive">Разработано
+        <img class="footer__link-icon" src="https://placehold.it/27x34" alt="HTML Academy">
+      </a>
+    </div>
   </footer>
 
 </body>
