Изменил разметку блока hero в index.html

--- a/source/index.html
+++ b/source/index.html
@@ -54,7 +54,7 @@
     </ul>
     <p class="delivery header__delivery">Бесплатная доставка по России</p> -->
     <section class="hero hero--main-page">
-      <h1 class="hero__title">Милые штуки ручной<br> работы для дома</h1>
+      <h1 class="hero__title hero__title--main">Милые штуки ручной<br> работы для дома</h1>
       <ul class="hero__list">
         <li class="hero__item hero__item--interior">
           <a class="hero__link" href="#">
