--- a/source/form.html
+++ b/source/form.html
@@ -54,87 +54,87 @@
     </ul>
     <p class="delivery header__delivery">Бесплатная доставка по России</p> -->
     <section class="hero hero--inner-page">
-      <h1 class="hero__title title">Вязание на заказ</h1>
+      <h1 class="hero__title hero__title--form">Вязание на заказ</h1>
     </section>
   </header>
 
-  <main class="main page__main">
+  <main class="main main--form">
     <h2 class="visually-hidden">Форма заказа</h2>
-    <p class="main__text text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
-    <form class="form main__form" action="https://echo.htmlacademy.ru" method="GET">
+    <p class="main__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
+    <form class="form" action="https://echo.htmlacademy.ru" method="GET">
       <fieldset class="form__fieldset">
-        <legend class="form__legend">Тип</legend>
+        <legend class="form__legend form__legend--type">Тип</legend>
         <ul class="form__inputs">
           <li class="form__inputs-item">
-            <input class="visually-hidden form__input form__input--radio" type="radio" name="type" id="accessory" value="accessory" checked>
-            <label class="form__label" for="accessory">Аксессуар для интерьера</label>
+            <input class="visually-hidden form__input-radio" type="radio" name="type" id="accessory" value="accessory" checked>
+            <label class="form__label form__label--radio" for="accessory">Аксессуар для интерьера</label>
           </li>
           <li class="form__inputs-item">
-            <input class="visually-hidden form__input form__input--radio" type="radio" name="type" id="toy" value="toy">
-            <label class="form__label" for="toy">Детская игрушка</label>
+            <input class="visually-hidden form__input-radio" type="radio" name="type" id="toy" value="toy">
+            <label class="form__label form__label--radio" for="toy">Детская игрушка</label>
           </li>
         </ul>
       </fieldset>
       <fieldset class="form__fieldset">
-        <legend class="form__legend">Цвет</legend>
+        <legend class="form__legend form__legend--color">Цвет</legend>
         <ul class="form__inputs">
           <li class="form__inputs-item">
-            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="color" id="color-white" value="white" checked>
-            <label class="form__label" for="color-white">Белый</label>
+            <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-white" value="white" checked>
+            <label class="form__label form__label--checkbox" for="color-white">Белый</label>
           </li>
           <li class="form__inputs-item">
-            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="color" id="color-grey" value="grey" checked>
-            <label class="form__label" for="color-grey">Серый</label>
+            <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-grey" value="grey" checked>
+            <label class="form__label form__label--checkbox" for="color-grey">Серый</label>
           </li>
           <li class="form__inputs-item">
-            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="color" id="color-tiffany" value="tiffany">
-            <label class="form__label" for="color-tiffany">«Тиффани»</label>
+            <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-tiffany" value="tiffany">
+            <label class="form__label form__label--checkbox" for="color-tiffany">«Тиффани»</label>
           </li>
           <li class="form__inputs-item">
-            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="color" id="color-black" value="black">
-            <label class="form__label" for="color-black">Черный</label>
+            <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-black" value="black">
+            <label class="form__label form__label--checkbox" for="color-black">Черный</label>
           </li>
           <li class="form__inputs-item">
-            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="color" id="color-pink" value="pink">
-            <label class="form__label" for="color-pink">Розовый</label>
+            <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-pink" value="pink">
+            <label class="form__label form__label--checkbox" for="color-pink">Розовый</label>
           </li>
           <li class="form__inputs-item">
-            <input class="visually-hidden form__input form__input--checkbox" type="checkbox" name="color" id="color-orange" value="orange">
-            <label class="form__label" for="color-orange">Оранжевый</label>
+            <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-orange" value="orange">
+            <label class="form__label form__label--checkbox" for="color-orange">Оранжевый</label>
           </li>
         </ul>
       </fieldset>
       <fieldset class="form__fieldset">
-        <legend class="form__legend">Фио</legend>
+        <legend class="form__legend form__legend--name">Фио</legend>
         <p class="form__field">
-          <label class="form__label" for="name-field">Имя:</label>
-          <input class="form__input form__input--text" type="text" name="name" id="name-field" placeholder="Введите ваше имя*" required>
+          <label class="form__label form__label--name" for="name-field">Имя:</label>
+          <input class="form__input" type="text" name="name" id="name-field" placeholder="Введите ваше имя*" required>
         </p>
         <p class="form__field">
-          <label class="form__label" for="surname-field">Фамилия:</label>
-          <input class="form__input form__input--text" type="text" name="surname" id="surname-field" placeholder="Укажите фамилию*" required>
+          <label class="form__label form__label--name" for="surname-field">Фамилия:</label>
+          <input class="form__input" type="text" name="surname" id="surname-field" placeholder="Укажите фамилию*" required>
         </p>
         <p class="form__field">
-          <label class="form__label" for="second-name-field">Отчество:</label>
-          <input class="form__input form__input--text" type="text" name="second-name" id="second-name-field" placeholder="Отчество, если желаете">
+          <label class="form__label form__label--name" for="second-name-field">Отчество:</label>
+          <input class="form__input" type="text" name="second-name" id="second-name-field" placeholder="Отчество, если желаете">
         </p>
       </fieldset>
       <fieldset class="form__fieldset">
-        <legend class="form__legend">Тел</legend>
+        <legend class="form__legend form__legend--tel">Тел</legend>
         <label class="visually-hidden" for="phone-field">Ваш телефон:</label>
-        <input class="form__input form__input--tel" type="tel" name="phone" id="phone-field" placeholder="+7 XXX XX XX*" required>
+        <input class="form__input form__input--tel" type="tel" name="phone" id="phone-field" placeholder="+7 XXX XXX XX XX*" required>
       </fieldset>
       <fieldset class="form__fieldset">
-        <legend class="form__legend">E-mail</legend>
+        <legend class="form__legend form__legend--email">E-mail</legend>
         <label class="visually-hidden" for="email-field">Ваш e-mail:</label>
         <input class="form__input form__input--email" type="email" name="email" id="email-field" placeholder="Ваш Email*" required>
       </fieldset>
-      <fieldset class="form__fieldset">
-        <legend class="form__legend">Доп</legend>
+      <fieldset class="form__fieldset form__fieldset--last">
+        <legend class="form__legend form__legend--additional">Доп</legend>
         <label class="visually-hidden" for="textarea-field">Опишите ваши пожелания</label>
         <textarea class="form__input form__input--textarea" name="description" id="textarea-field" placeholder="Опишите все ваши пожелания к заказу"></textarea>
       </fieldset>
-      <p class="form__text text">*Поля обязательны для заполнения</p>
+      <p class="form__text">*Поля обязательны для заполнения</p>
       <button class="button form__send" type="submit">Отправить заказ</button>
     </form>
   </main>
