Изменил разметку блоков product-list и product для стилизации (mobile)

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -54,11 +54,11 @@
     </ul>
     <p class="delivery header__delivery">Бесплатная доставка по России</p> -->
     <section class="hero hero--inner-page">
-      <h1 class="hero__title title">Каталог товаров</h1>
+      <h1 class="hero__title">Каталог товаров</h1>
     </section>
   </header>
 
-  <main class="main page__main">
+  <main class="main">
     <section class="main__catalog">
       <h2 class="visually-hidden">Наши изделия</h2>
       <ul class="products-list">
@@ -67,14 +67,17 @@
             <img class="product__image" src="https://placehold.it/260x195" alt="Зайчик-попрыгайчик" width="260" height="195">
           </a>
           <div class="product__wrapper">
-            <h3 class="product__title title-small">
-              <a class="product__link" href="#">Зайчик-попрыгайчик</a>
-            </h3>
-            <p class="product__description">Рост 30 см, вес 200 г</p>
+            <div class="product__info">
+              <h3 class="product__title">
+                <a class="product__link" href="#">Зайчик-попрыгайчик</a>
+              </h3>
+              <p class="product__description">Рост 30 см, вес 200 г</p>
+            </div>
             <div class="product__buy">
               <p class="product__price">1 200 руб.</p>
               <button class="product__order" type="button">
                 <span class="visually-hidden">Положить в корзину</span>
+                <img src="https://placehold.it/20x19" alt="Иконка корзины" width="20" height="19">
               </button>
             </div>
           </div>
@@ -84,14 +87,17 @@
             <img class="product__image" src="https://placehold.it/260x195" alt="Корзинка для белья" width="260" height="195">
           </a>
           <div class="product__wrapper">
-            <h3 class="product__title title-small">
-              <a class="product__link" href="#">Корзинка для белья</a>
-            </h3>
-            <p class="product__description">Диаметр 15 см, высота 10 см</p>
+            <div class="product__info">
+              <h3 class="product__title title-small">
+                <a class="product__link" href="#">Корзинка для белья</a>
+              </h3>
+              <p class="product__description">Диаметр 15 см, высота 10 см</p>
+            </div>
             <div class="product__buy">
               <p class="product__price">690 руб.</p>
               <button class="product__order" type="button">
                 <span class="visually-hidden">Положить в корзину</span>
+                <img src="https://placehold.it/20x19" alt="Иконка корзины" width="20" height="19">
               </button>
             </div>
           </div>
@@ -101,14 +107,17 @@
             <img class="product__image" src="https://placehold.it/260x195" alt="Большая корзинка для игрушек" width="260" height="195">
           </a>
           <div class="product__wrapper">
-            <h3 class="product__title title-small">
-              <a class="product__link" href="#">Большая корзинка для игрушек</a>
-            </h3>
-            <p class="product__description">Диаметр 30 см, высота 30 см</p>
+            <div class="product__info">
+              <h3 class="product__title title-small">
+                <a class="product__link" href="#">Большая корзинка для игрушек</a>
+              </h3>
+              <p class="product__description">Диаметр 30 см, высота 30 см</p>
+            </div>
             <div class="product__buy">
               <p class="product__price">1 500 руб.</p>
               <button class="product__order" type="button">
                 <span class="visually-hidden">Положить в корзину</span>
+                <img src="https://placehold.it/20x19" alt="Иконка корзины" width="20" height="19">
               </button>
             </div>
           </div>
