Изменил разметку catalog.html для стилизации (mobile)

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -125,15 +125,21 @@
       </ul>
     </section>
     <section class="video main__video">
-      <h2 class="video__title title-small">Процесс производства</h2>
-      <div class="video-player video__video-player">
-        <img class="video-player__screenshot" src="https://placehold.it/260x150" alt="Видео процесса производства" width="260" height="150">
-        <button class="video-player__play" type="button">
+      <div class="video__title">
+        <img class="video__title-icon" src="https://placehold.it/32x23" alt="Иконка видео-раздела" width="32" height="23">
+        <h2 class="video__title-text">Процесс производства</h2>
+      </div>
+      <div class="video__player">
+        <img class="video__screenshot" src="https://placehold.it/260x150" alt="Видео процесса производства" width="260" height="150">
+        <button class="video__play-button" type="button">
           <span class="visually-hidden">Запустить видео</span>
+          <img src="https://placehold.it/101x77/ff0000" alt="Кнопка плеера" width="101" height="77">
         </button>
       </div>
-      <p class="video__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-      <a class="button video__order" href="#">Сделать заказ</a>
+      <div class="video__description">
+        <p class="video__text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+        <a class="button video__order" href="#">Сделать заказ</a>
+      </div>
     </section>
   </main>
 
