Изменил разметку catalog.html, удалил блок products-list, добавил блок catalog

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -58,11 +58,11 @@
     </section>
   </header>
 
-  <main class="main">
-    <section class="main__catalog">
+  <main class="main main--catalog">
+    <section class="catalog">
       <h2 class="visually-hidden">Наши изделия</h2>
-      <ul class="products-list">
-        <li class="product products-list__item">
+      <ul class="catalog__list">
+        <li class="product catalog__item">
           <a class="product__link" href="#">
             <img class="product__image" src="https://placehold.it/260x195" alt="Зайчик-попрыгайчик" width="260" height="195">
           </a>
@@ -82,7 +82,7 @@
             </div>
           </div>
         </li>
-        <li class="product products-list__item">
+        <li class="product catalog__item">
           <a class="product__link" href="#">
             <img class="product__image" src="https://placehold.it/260x195" alt="Корзинка для белья" width="260" height="195">
           </a>
@@ -102,7 +102,7 @@
             </div>
           </div>
         </li>
-        <li class="product products-list__item">
+        <li class="product catalog__item">
           <a class="product__link" href="#">
             <img class="product__image" src="https://placehold.it/260x195" alt="Большая корзинка для игрушек" width="260" height="195">
           </a>
@@ -124,7 +124,7 @@
         </li>
       </ul>
     </section>
-    <section class="video main__video">
+    <section class="video">
       <div class="video__title">
         <img class="video__title-icon" src="https://placehold.it/32x23" alt="Иконка видео-раздела" width="32" height="23">
         <h2 class="video__title-text">Процесс производства</h2>
