--- a/source/catalog.html
+++ b/source/catalog.html
@@ -61,7 +61,7 @@
     </ul>
     <p class="delivery header__delivery">Бесплатная доставка по России</p> -->
     <section class="hero hero--inner-page">
-      <h1 class="hero__title">Каталог товаров</h1>
+      <h1 class="hero__title hero__title--inner-page">Каталог товаров</h1>
     </section>
   </header>
 
@@ -145,7 +145,7 @@
     </section>
     <section class="video">
       <div class="video__title">
-        <svg class="video__title-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="32" height="32" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
+        <svg class="video__title-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="52" height="32" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
           <g transform="translate(0 192)">
             <path d="M26-177l6-4v16l-6-4V-177z M24-177v8c0,2.209-1.791,4-4,4H4c-2.209,0-4-1.791-4-4v-8c0-2.209,1.791-4,4-4h10 c0-1.105,0.895-2,2-2v-2H5c-0.553,0-1-0.447-1-1s0.447-1,1-1h12c0.553,0,1,0.447,1,1v3c1.105,0,2,0.895,2,2 C22.209-181,24-179.209,24-177z M12-177H4v8h8V-177z M20-176c0-0.553-0.447-1-1-1h-4c-0.553,0-1,0.447-1,1s0.447,1,1,1h4 C19.553-175,20-175.447,20-176z"/>
           </g>
