Убрал br в заголовке модального окна в index.html

--- a/source/index.html
+++ b/source/index.html
@@ -297,7 +297,7 @@
   <!-- Modals -->
   <div class="overlay"></div>
   <section class="modal modal-basket">
-    <h2 class="modal-basket__title">Добавить<br>в корзину</h2>
+    <h2 class="modal-basket__title">Добавить в корзину</h2>
     <p class="modal-basket__text">Выберите размер:</p>
     <div class="modal-basket__size">
       <button class="button modal-basket__size-button modal-basket__size-button--active">S</button>
